[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { version = "2.0.4", default-features = false }
env_logger = { version = "0.10.1", default-features = false }
log = { version = "0.4.20", default-features = false, features = ["std"] }
thiserror = "1.0.50"
