[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { optional = true, version = "0.4.39", default-features = false, features = ["libc", "now", "std", "clock"] }
lazy_static = { optional = true, version = "1.5.0", default-features = false }
colored = { version = "2.2.0", default-features = false }
env_logger = { version = "0.10.2", default-features = false }
log = { version = "0.4.25", default-features = false, features = ["std"] }
thiserror = "1.0.69"

[features]
chrono = ["dep:chrono", "dep:lazy_static"]
